Fixed Treasury Page on Mobile
AB#2796

--- a/components/tooltips/TreasuryTooltipLP/TreasuryTooltipLP.module.scss
+++ b/components/tooltips/TreasuryTooltipLP/TreasuryTooltipLP.module.scss
@@ -10,6 +10,7 @@
   @media (max-width: 500px) {
     margin-top: -20px;
     margin-left: 3px;
+    display: none;
   }
 }
 
